# devkit

./: .gitignore  README.md  discovery.md  github.py  pyproject.toml
src/devkit/: config.py  main.py
src/devkit/commands/: ai.py  github.py  workflow.py
src/devkit/utils/: check.py  display.py  fzf.py  gh.py  shell.py  validation.py
